kubernetes/ingress/contour/blue-green/blue-workload.yml
apiVersion: v1
kind: Namespace
metadata:
  name: bluegreen
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: blue-app
    app-version: blue    
  name: blue-deployment
  namespace: bluegreen
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blue-app
  strategy: {}
  template:
    metadata:
      labels:
        app: blue-app
        app-version: blue
    spec:
      containers:
      - image: nginx
        name: blue-app
        lifecycle:
          postStart:
            exec:
              command: ["/bin/sh","-c","export MYIP=$(hostname -I);echo \"<!DOCTYPE html><html><body><h1>BLUE! - $MYIP</h1></body></html>\" > /usr/share/nginx/html/index.html;"]
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: blue-app
    app-version: blue    
  name: blue-svc
  namespace: bluegreen
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: blue-app
  type: ClusterIP
